Fix bleeding background on empty field.

--- a/themes/cp_themes/default/css/global.css
+++ b/themes/cp_themes/default/css/global.css
@@ -4222,6 +4222,7 @@ div.pageContents,
 	padding-top: 24%;
 	color: #aaa;
 	border-bottom: none;
+	background: transparent;
 }
 
 .multiselect li label {
